@@ -94,7 +94,7 @@ public class AMContainerHelpers {
    */
   private static ContainerLaunchContext createCommonContainerLaunchContext(
       Map<ApplicationAccessType, String> applicationACLs,
-      Credentials credentials, Map<String, LocalResource> localResources) {
+      Credentials credentials) {
 
     // Application environment
     Map<String, String> environment = new HashMap<String, String>();
@@ -137,7 +137,7 @@ public class AMContainerHelpers {
     // The null fields are per-container and will be constructed for each
     // container separately.
     ContainerLaunchContext container =
-        ContainerLaunchContext.newInstance(localResources, environment, null,
+        ContainerLaunchContext.newInstance(null, environment, null,
             serviceData, containerCredentialsBuffer, applicationACLs);
     return container;
   }
@@ -145,7 +145,6 @@ public class AMContainerHelpers {
   @VisibleForTesting
   public static ContainerLaunchContext createContainerLaunchContext(
       TezDAGID tezDAGID,
-      Map<String, LocalResource> commonDAGLRs,
       Map<ApplicationAccessType, String> acls,
       ContainerId containerId,
       Map<String, LocalResource> localResources,
@@ -159,7 +158,7 @@ public class AMContainerHelpers {
     synchronized (commonContainerSpecLock) {
       if (!commonContainerSpecs.containsKey(tezDAGID)) {
         commonContainerSpec =
-            createCommonContainerLaunchContext(acls, credentials, commonDAGLRs);
+            createCommonContainerLaunchContext(acls, credentials);
         commonContainerSpecs.put(tezDAGID, commonContainerSpec);
       } else {
         commonContainerSpec = commonContainerSpecs.get(tezDAGID);
@@ -174,13 +173,6 @@ public class AMContainerHelpers {
         lastDAGID = tezDAGID;
       }
     }
-
-    // Fill in the fields needed per-container that are missing in the common
-    // spec.
-    Map<String, LocalResource> lResources =
-        new TreeMap<String, LocalResource>();
-    lResources.putAll(commonContainerSpec.getLocalResources());
-    lResources.putAll(localResources);
 
     // Setup environment by cloning from common env.
     Map<String, String> env = commonContainerSpec.getEnvironment();
@@ -214,7 +206,7 @@ public class AMContainerHelpers {
 
     // Construct the actual Container
     ContainerLaunchContext container =
-        ContainerLaunchContext.newInstance(lResources, myEnv, commands,
+        ContainerLaunchContext.newInstance(localResources, myEnv, commands,
             myServiceData, commonContainerSpec.getTokens().duplicate(), acls);
 
     return container;
