@@ -460,10 +460,8 @@ public class AMContainerImpl implements AMContainer {
       container.credentialsChanged = true;
 
       TezDAGID dagId = null;
-      Map<String, LocalResource> dagLocalResources = null;
       if (container.appContext.getCurrentDAG() != null) {
         dagId = container.appContext.getCurrentDAG().getID();
-        dagLocalResources = container.appContext.getCurrentDAG().getLocalResources();
       }
 
       // TODO TEZ-2625 This should ideally be handled inside of user code. Will change once
@@ -489,7 +487,7 @@ public class AMContainerImpl implements AMContainer {
       }
 
       ContainerLaunchContext clc = AMContainerHelpers.createContainerLaunchContext(
-          dagId, dagLocalResources,
+          dagId,
           container.appContext.getApplicationACLs(),
           container.getContainerId(),
           containerContext.getLocalResources(),
